# usher-exploring

./: .gitignore  CLAUDE.md  README.en.md  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/phases/01-data-infrastructure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-prototype-evidence-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: default.yaml
data/report/: candidates.parquet  candidates.provenance.yaml  candidates.tsv  reproducibility.json  reproducibility.md  top20_candidate_analysis.md
src/usher_pipeline/cli/: __init__.py  (+6 more)
tests/: test_animal_models.py  test_animal_models_integration.py  test_annotation.py  test_annotation_integration.py  test_api_client.py  test_config.py  test_expression.py  test_expression_integration.py  test_gene_mapping.py  test_gnomad.py  test_gnomad_integration.py  test_integration.py  test_literature.py  test_literature_integration.py  test_localization.py  test_localization_integration.py  test_output.py  test_persistence.py  test_protein.py  test_protein_integration.py  test_report_cmd.py  test_reproducibility.py  test_scoring.py  test_scoring_integration.py  test_validation.py  test_visualizations.py
(+100 files in other folders)
